@@ -66,8 +66,7 @@ class ZMManufacturers extends ZMObject {
 
         $sql = "SELECT mi.*, m.*
                 FROM " . TABLE_MANUFACTURERS . " m
-                  LEFT JOIN " . TABLE_MANUFACTURERS_INFO . " mi
-                    ON (m.manufacturers_id = mi.manufacturers_id AND mi.languages_id = :languageId)
+                  LEFT JOIN " . TABLE_MANUFACTURERS_INFO . " mi ON (m.manufacturers_id = mi.manufacturers_id AND mi.languages_id = :languageId)
                 WHERE m.manufacturers_id = :manufacturerId";
         $args = array('manufacturerId' => $id, 'languageId' => $languageId);
 
@@ -115,8 +114,7 @@ class ZMManufacturers extends ZMObject {
 
         $sql = "SELECT mi.*, m.* 
                 FROM " . TABLE_MANUFACTURERS . " m
-                  LEFT JOIN " . TABLE_MANUFACTURERS_INFO . " mi
-                    ON (m.manufacturers_id = mi.manufacturers_id AND mi.languages_id = :languageId)";
+                  LEFT JOIN " . TABLE_MANUFACTURERS_INFO . " mi ON (m.manufacturers_id = mi.manufacturers_id AND mi.languages_id = :languageId)";
         $args = array('languageId' => $languageId);
 
         $cacheKey = ZMTools::mkUnique('manufacturer', $languageId);
