@@ -94,6 +94,7 @@ Release 0.9.5
 - rename ZMProducts::getProducts() to getAllProducts()
 - make simple search use query pager to paginate results from ZMProductFinder
 - change search sidebox to use the new simple search
+- add sql aware support for ZMProducts::getProductsForCategoryId
 
 Release 0.9.4.2
 - improve ZMAjaxController::flattenObject(); using ZMBeanUtils, correct
